# libeemd

./: .gitignore  ChangeLog  Makefile  Makefile.am  README.md  configure.ac
examples/: .gitignore  Makefile  Makefile.am  bemd_example.c  bemd_example_plot.py  ceemdan_example.c  eemd_example.c
src/: array.h  bemd.c  bemd.h  ceemdan.c  ceemdan.h  eemd.c  eemd.h  eemd_routine.c  emd.c  emd.h  error.c  error.h  extrema.c  extrema.h  memd.c  memd.h  spline.c  spline.h
